# week-40-b-betteruptime-rust

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.migrate  Readme.md  data.txt  docker-compose.yml  sample.txt
api/: Cargo.toml  test_api.sh
api/src/: input.rs  main.rs
api/src/routes/: user.rs  website.rs
db_processor/src/: main.rs
notification/: Cargo.toml
notification/src/: main.rs
redis_lib/src/: lib.rs
sample_test_crate/: Cargo.toml
sample_test_crate/src/: main.rs
store/: .env  Cargo.toml  diesel.toml
store/migrations/: 20250602220410_init.sql
store/migrations/2025-05-31-202353_create_users/: up.sql
store/migrations/2025-06-01-120357_update_table/: down.sql  up.sql
store/src/: config.rs  lib.rs  schema.rs  store.rs
store/src/models/: website.rs
worker/: Cargo.toml
worker/src/: main.rs
