[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = "3.1.10"
tokio = { version = "1", features = ["full"] }
store = { path = "../store" }
serde = { version = "1.0.219", features = ["derive"] }
dotenv = "0.15.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.140"
redis_lib = { version = "0.1.0", path = "../redis_lib" }
influxdb2 = "0.5.2"
influxdb2-derive = "0.1.1"
num-traits = "0.2"
influxdb2-structmap = "0.2"
anyhow = "1.0"
