[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
influxdb2 = "0.5.2"
redis_lib = { version = "0.1.0", path = "../redis_lib" }
reqwest = { version = "0.12.19", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
dotenv = "0.15.0"
futures = "0.3"
